--- a/vignettes/gm.Rmd
+++ b/vignettes/gm.Rmd
@@ -842,38 +842,67 @@ show(m, to = c("score", "audio"))
 
 ## Comparison
 
-At the time of writing, the author knows only 
-[tabr](https://github.com/leonawicz/tabr)
-that has similar purposes and similar level of functionality to gm,
-among other R packages.
+### R package [tabr](https://github.com/leonawicz/tabr)
 
-However, there are some noticeable differences:
+At the time of writing, the author knows only tabr that has similar purposes
+and similar level of functionality to gm, among other R music packages.
 
-- Besides music generation, tabr also provides functions for music analysis
-and manipulation.
-- tabr can generate guitar tabs and add more music notation symbols to
-score than gm can. gm is not yet for professional level music notation.
-- gm embeds generated music in R Markdown documents and R Jupyter Notebooks,
-while tabr exports it.
-- gm uses R's basic data structures such as vector and list
+However, there are some noticeable differences.
+
+First, besides music generation, tabr also provides functions for music 
+analysis and manipulation. gm is only for music generation.
+
+Second, as for music generation, tabr is more about music notation.
+For example, tabr can generate guitar tabs and add more music notation
+symbols to score than gm can. gm is more about music creation at a higher
+level.
+
+Third, gm embeds generated music in R Markdown documents and R Jupyter
+Notebooks, while tabr exports it.
+
+Fourth, gm uses R's basic data structures such as vector and list
 to represent music, while tabr uses strings.
-- gm's language is simpler than tabr's, it is more straightforward
+
+Last, gm's language is simpler than tabr's, it is more straightforward
 to add components such as musical lines in gm. This and the above difference
 make gm more suitable for music programming.
 
-In Python, [music21](http://web.mit.edu/music21/)
-is a mature library which provides abundant
+
+### Python library [music21](http://web.mit.edu/music21/)
+
+music21 is a mature and famous Python library which provides abundant
 tools for music generation and analysis. For its music generation 
 functionality, music21 can generate more professional musical scores than
-gm can, and also works in Python Jupyter Notebooks. However, at its core,
-gm's language is far simpler and more intuitive. For example, in music21, 
+gm can, and also works in Python Jupyter Notebooks.
 
-- it's cumbersome to define notes and add them to musical
-lines,
-- users have to be concerned about musical score structures when they only
-want to express music structures at a higher level,
-- creation of complex and nested tuplets is not straightforward,
-- ...
+However, the advantage of gm is still that its language is far simpler 
+and more intuitive.
+
+For example, in music21, it's cumbersome to define notes and add them to
+musical lines:
+
+```python
+from music21 import *
+
+note1 = note.Note("C4")
+note2 = note.Note("F#4")
+note3 = note.Note("B-2")
+
+stream1 = stream.Stream()
+
+stream1.append(note1)
+stream1.append(note2)
+stream1.append(note3)
+```
+
+Also, creation of complex and nested tuplets is not straightforward.
+See [Complex and Tuplets](http://web.mit.edu/music21/doc/usersGuide/usersGuide_19_duration2.html).
+
+And sometimes users have to be concerned about musical score structures when
+they only want to express music structures at a higher level.
+
+
+### Summary
 
 In summary, gm is a good tool for expression of high-level music structures
 and communication of generated music. It's not yet for professional level
