--- a/vignettes/cn.Rmd
+++ b/vignettes/cn.Rmd
@@ -1,8 +1,8 @@
 ---
-title: "用 R 创作音乐"
+title: "用 R 写音乐"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{用 R 创作音乐}
+  %\VignetteIndexEntry{用 R 写音乐}
   %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
 ---
@@ -15,13 +15,13 @@ knitr::opts_chunk$set(
 )
 ```
 
-本文要介绍 R 包 [gm](https://github.com/flujoo/gm)，你可以用它来创作音乐。
+本文要介绍 R 包 [gm](https://github.com/flujoo/gm)，你可以用它来写音乐。
 
-具体来说，gm 有三大特点：
+具体来说，gm 有两大特点：
 
-1. 它设计了一套非常简单的语言，你可以用这个语言来描述音乐。
-2. gm 会将你的描述转化成乐谱和音频，你几乎不需要考虑记谱的技术细节。
-3. gm 可以在 R Markdown 文档、R Jupyter 笔记本和 RStudio 中使用，并自动将生成的音乐嵌入在生成的文本之中。
+第一，它提供了一套简单高阶的语言，你可以用这个语言来描述音乐，它会将你的描述转化成乐谱和音频。这个过程中，你不需要考虑无关的技术细节。
+
+第二，gm 可以在 R Markdown 文档和 R Jupyter 笔记本中使用，它会自动将生成的音乐嵌入在生成的文本之中。
 
 先来看一个简单的例子。
 
@@ -38,7 +38,7 @@ m <-
   Music() +
   # 加上 4/4 拍号
   Meter(4, 4) +
-  # 加上一条包含四个音的旋律线
+  # 加上一条包含四个音的声部
   Line(list("C5", "D5", "E5", "F5"), list(1, 1, 1, 1))
 
 # 转化成乐谱和音频
@@ -48,7 +48,7 @@ show(m, c("score", "audio"))
 相信这个例子足够让你感受 gm 的简单和直观。深入之前，先来看看如何下载。
 
 
-## 下载与设置
+## 下载
 
 从 CRAN 上下载：
 
@@ -59,7 +59,7 @@ install.packages("gm")
 从 Github 上下载开发版：
 
 ``` {.r}
-# 请先下载 devtools
+# 请先下载 devtools 如果没有的话
 # install.packages("devtools")
 
 devtools::install_github("flujoo/gm")
@@ -67,11 +67,30 @@ devtools::install_github("flujoo/gm")
 
 你还需要[下载 MuseScore](https://musescore.org/)，它是一款开源免费的打谱软件。
 
+
+## 设置
+
 MuseScore 有[默认的安装路径](https://musescore.org/en/handbook/3/revert-factory-settings)，如果你安装到其它路径，请在 .Renviron 文件中设置：
 
-1. 用 `usethis::edit_r_environ()` 打开 .Renviron 文件。
-2. 在其中加入 `MUSESCORE_PATH=<MuseScore 可执行文件的路径>`。
-3. 重启 R。
+第一，打开 .Renviron 文件。可以用命令：
+
+```r
+usethis::edit_r_environ()
+```
+
+第二，在其中加入：
+
+```
+MUSESCORE_PATH=<MuseScore 可执行文件的路径>
+```
+
+比如：
+
+```
+MUSESCORE_PATH="C:/Program Files (x86)/MuseScore 3/bin/MuseScore3.exe"
+```
+
+第三，重启 R 以激活更改。
 
 
 ## 深入一点
@@ -88,7 +107,7 @@ m <- Music()
 m <- m + Meter(4, 4)
 ```
 
-加上旋律线：
+加上声部：
 
 ```{r}
 m <- m + Line(pitches = list("C5"), durations = list("whole"))
@@ -106,7 +125,7 @@ m
 show(m)
 ```
 
-gm 的语法有点像 ggplot2，你可以不断添加新的成分，然后查看，然后再添加，不断反复。
+gm 的语法有点像 ggplot2，你可以不断添加成分，然后查看，然后再添加，不断反复。
 
 我们还可以加上拍速记号：
 
@@ -115,7 +134,7 @@ m <- m + Tempo(120)
 show(m)
 ```
 
-加上新的旋律线：
+加上新的声部：
 
 ```{r}
 m <- m + Line(
@@ -126,32 +145,12 @@ m <- m + Line(
 show(m)
 ```
 
-这个过程可以继续，但我们在此打住。你可以查看[完整的文档](https://flujoo.github.io/gm/articles/gm.html)解锁所有功能。
+这个过程可以继续，但我们在此打住。
 
 
-## 与其它包的比较
+## 算法作曲
 
-在 R 中，我所知的有类似功能且较为成熟的包只有 [tabr](https://github.com/leonawicz/tabr). 但两者依然有明显的区别：
-
-- tabr 除了生成音乐，还可以分析音乐。
-- tabr 可以生成吉他谱，并且支持更多的记谱功能。gm 暂时还不是专业级别的记谱工具。
-- gm 直接将生成的音乐嵌入在 R Markdown 文档或 R Jupyter 笔记本中，tabr 则需要导出查看。
-- gm 使用 R 的基本数据结构来表征音乐结构，比如向量和列表，而 tabr 则使用字符串。
-- gm 的语言更简单直观，结合上面这点，gm 更适合音乐编程。
-
-Python 有一个非常成熟的库 [music21](http://web.mit.edu/music21/)，它提供了非常丰富的工具用来分析和生成音乐。就生成音乐的功能来说，music21 能生成相对更加专业的乐谱，同时支持在 Python Jupyter 笔记本中嵌入生成的音乐。 相比之下，gm 的优势依然是更为简单的语言。比如，在 music21 中，
-
-1. 创建音符并组合成旋律线的过程非常繁琐笨重，
-2. 用户有时候必须关注乐谱的技术细节，哪怕他们只想高阶地描述音乐结构，
-3. 处理复杂的连音时不够直观，
-4. ......
-
-综合来说，gm 的优点是，语言高阶简单，并且适用于常见的 R 工作环境。而如果你想要专业级别的记谱软件，gm 目前还不够。
-
-
-## 自动作曲
-
-gm 的一个有趣的应用是算法作曲，也就是用算法来生成音乐。下面是一个例子：
+gm 的一个有趣应用是算法作曲，也就是用算法来生成音乐。下面是一个例子：
 
 ```{r}
 pitches <- as.list(c(64, 65, 69, 71, 72, 76))
@@ -168,4 +167,7 @@ show(m, to = c("score", "audio"))
 
 上面的代码生成了九条声部，所有声部的音符都是相同的，区别是每条声部加入的时间都比前一条声部慢一点，因此形成了有趣的回音效果。
 
-从这个例子你也可以感受到，gm 利用 R 的基本数据结构来表征音高和时值，语法简单，非常适合用编程的方式产生音乐。
+
+## 更多内容
+
+你可以查看[完整的文档](https://flujoo.github.io/gm/articles/gm.html)了解更多功能。
