--- a/vignettes/gm.Rmd
+++ b/vignettes/gm.Rmd
@@ -840,6 +840,21 @@ show(m, to = c("score", "audio"))
 ```
 
 
+## MuseScore Command Line Options
+
+You can pass MuseScore command line options to function `export()` and
+`show()`.
+
+For example, you can change the generated score's DPI and margin:
+
+```{r}
+m <- Music() + Meter(4, 4) + Line(list("C5"), list(4))
+show(m, musescore = "-r 400 -T 100")
+```
+
+See [MuseScore command line options](https://musescore.org/en/handbook/3/command-line-options).
+
+
 ## Comparison
 
 ### R Package [tabr](https://github.com/leonawicz/tabr)
