--- a/vignettes/gm.Rmd
+++ b/vignettes/gm.Rmd
@@ -123,7 +123,16 @@ As shown in the *Quick Example* section, the workflow for creating music is usua
 2. Add components to it with `+`.
 3. Display the music with `show()`.
 
-A `Music` object is represented as a list of data frames. Each data frame represents a type of components added to it. To examine a `Music` object's representation, simply print it. For example, the representation of the `Music` object created in the *Quick Example* section:
+A `Music` object is represented as a list of data frames. Each data frame represents a type of components added to it. To examine a `Music` object's representation, simply print it. For example, below is the representation of the `Music` object created in the *Quick Example* section:
+
+```{r}
+music <- 
+  Music() +
+  Meter(4, 4) +
+  Line(c("C5", "D5", "E5", "F5"))
+  
+show(music)
+```
 
 ```{r}
 music
