--- a/vignettes/gm.Rmd
+++ b/vignettes/gm.Rmd
@@ -320,3 +320,47 @@ A pitch notation consists of
 1. a tone name which can be "C", "D", "E", "F", "G", "A", or "B",
 2. an optional accidental which can be "-", "--", "#", or "##", and
 3. a number between 0 and 9 that indicates the pitch's octave.
+
+### MIDI Note Numbers
+
+A MIDI note number is a number between 12 and 127. You can also use MIDI note numbers to specify pitches. For example:
+
+```{r}
+pitches <- 61:64
+music <- Music() + Meter(4, 4) + Line(pitches)
+show(music)
+```
+
+See a [conversion table](https://en.wikipedia.org/wiki/Scientific_pitch_notation#Table_of_note_frequencies) of pitch notations and MIDI note numbers.
+
+An advantage of MIDI note numbers is ease of operation. Suppose we have the following four MIDI note numbers:
+
+```{r}
+pitches <- c(60, 62, 64, 65)
+music <- Music() + Meter(4, 4) + Line(pitches)
+show(music)
+```
+
+To transpose them up by a fifth, we can simply add 7 to them:
+
+```{r}
+pitches <- pitches + 7
+music <- Music() + Meter(4, 4) + Line(pitches)
+show(music)
+```
+
+However, a disadvantage of MIDI note numbers is ambiguity. For example, there is more than one equivalent pitch notation to the MIDI note number 73:
+
+```{r}
+pitches <- c("C#5", "D-5", "B##4")
+music <- Music() + Meter(3, 4) + Line(pitches)
+show(music)
+```
+
+gm interprets MIDI note numbers based on keys and neighbor pitches. In the following example, MIDI note number 73 is interpreted as C#5 in the first measure, but as D-5 in the second measure:
+
+```{r}
+pitches <- c(73, 73)
+music <- Music() + Meter(1, 4) + Key(7) + Key(-7, bar = 2) + Line(pitches)
+show(music)
+```
