--- a/vignettes/gm.Rmd
+++ b/vignettes/gm.Rmd
@@ -906,3 +906,94 @@ music <-
 
 show(music)
 ```
+
+
+## Timbre 
+
+### Instrument
+
+You can use `Instrument()` to specify the instrument of a part. For example:
+
+```{r}
+pitches <- c("C4", "D4", "E4", "F4")
+
+music <-
+  Music() +
+  Meter(4, 4) +
+  Line(pitches) +
+  Line(pitches, bar = 2)
+
+show(music)  
+```
+
+```{r}
+instrument_1 <- Instrument(10, 1)
+instrument_1
+```
+
+```{r}
+instrument_2 <- Instrument(76, 2)
+instrument_2
+```
+
+```{r}
+music <- music + instrument_1 + instrument_2
+show(music)
+```
+
+You can change the sound placement with argument `pan`. For example:
+
+```{r echo = FALSE}
+path <- "/Applications/MuseScore 3.app/Contents/MacOS/mscore"
+options(gm.musescore_path = path)
+```
+
+```{r}
+pitches <- c("C4", "D4", "E4", "F4")
+
+music <-
+  Music() +
+  Meter(4, 4) +
+  Line(pitches) +
+  Line(pitches, bar = 2) + 
+  Line(pitches, bar = 3) +
+  Instrument(1, 1, pan = -90) +
+  Instrument(1, 2, pan = 0) +
+  Instrument(1, 3, pan = 90)
+
+show(music)  
+```
+
+```{r, echo = FALSE}
+options(gm.musescore_path = NULL)
+```
+
+Unfortunately, `pan` only works in MuseScore 3, while the latest version is 4, as of the time of writing. The two versions have slightly different features. So it’s recommended to install both versions, and temporarily change the path using `options()` when needed. For example, in macOS:
+
+```r
+path <- "/Applications/MuseScore 3.app/Contents/MacOS/mscore"
+options(gm.musescore_path = path)
+```
+
+### Pedal
+
+You can use `Pedal()` to add pedals. For example, the following are first two bars of Chopin’s nocturne Op.72 No.1:
+
+```{r}
+music <-
+  Music() +
+  Meter(4, 4) +
+  Key(1) +
+  Tempo(60) +
+  
+  Line(c("B4", "G5", "F#5", "E5"), c("8", "h.", "8", "8"), bar = 2) +
+  Grace(1) +
+  
+  Line(rep(c("E2", "B2", "G3", "E3", "C4", "B3"), 4), "q/3", as = "staff") +
+  Clef("F") +
+  Dynamic("p", 1) +
+  Pedal(1, 12) +
+  Pedal(13, 24)
+
+show(music)
+```
